# dsync

./: CLAUDE.md  Cargo.toml  flake.nix
.github/workflows/: ci.yml
doc/: dsync.md  plan.md
dsync/: Cargo.toml
dsync-ignore/: Cargo.toml
dsync-ignore/src/: eval.rs  lib.rs  pattern.rs  render.rs  repo.rs  rsync.rs  watchman.rs
dsync-ignore/tests/: prop_git.rs  prop_rsync.rs  prop_watchman.proptest-regressions  prop_watchman.rs
dsync-ignore/tests/common/: mod.rs
dsync/src/: barrier.rs  client.rs  exec.rs  fastpath.rs  ignore.rs  main.rs  protocol.rs  repo.rs  server.rs  state.rs  status.rs  sync.rs  target.rs  wquery.rs
dsync/tests/: barrier.rs  cli.rs  exec.rs  fastpath.rs  status.rs  sync.rs
dsync/tests/common/: mod.rs
