[package]
name = "dsync"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sync a git repo to a remote replica, driven by watchman"

[[bin]]
name = "ds"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dsync-ignore = { path = "../dsync-ignore" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
watchman_client.workspace = true
